--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-Welcome to my vim plugin repository!
+#Welcome to my vim plugin repository!
 
 This repository is used to quickly pull my vim plugins onto new machines.
 
-Installation:
+#Installation:
 	*NOTE* You will probably want to move the old ~/.vim directory if it already exists to ~/.vim-old	
-	git clone <link to this repo> ~/.vim
+	git clone "link to this repo" ~/.vim
 	cd ~/.vim
 	./install.sh
